# pytest-typechecker

./: .gitignore  README.md  pyproject.toml
pytest_typechecker/: checkers.py  plugin.py
tests/: test_recursion_nmypy_types.py  test_should_fail_types_xfail.py  test_types.py  test_types_xfail.py
