[tool.poetry]
name = "pytest_typechecker"
version = "0.3.2"
description = "Run type checkers on specified test files"
readme = "README.md"
authors = ["vivax <vivax3794@protonmail.com>"]
license = "MIT"
keywords = ["pytest", "unittest", "type hinting", "pyright", "mypy"]
classifiers = [
    "Framework :: Pytest",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Testing",
]
repository = "https://github.com/vivax3794/pytest-typehints"

[tool.poetry.plugins."pytest11"]
"pytest_typechecker" = "pytest_typechecker.plugin"

[tool.poetry.dependencies]
python = ">=3.6"
pytest = "^6.2.5"
mypy = "^0.931"
pyright = "^0.0.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
required_plugins = "pytest-typechecker"
xfail_strict=true